tandoor/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor-postgres
  namespace: tandoor
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: tandoor-postgres
