tandoor/tandoor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: tandoor
spec:
  selector:
    app: tandoor
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
